--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <img src="https://scpfoundation.net/local--files/scp-457/scp-457-new.png" width=400px; hight=500px>
 </div>
 <h1 style="color: green">Полезная инфа ниже</h1>
-<p><h2>Думаю вы поняли что эти дурки реально лучшие. Я бы и <a href="https://ru.wikipedia.org/wiki/Outlast">outlast</a> сюда добавил, да нужной картинки не нашёл. Если что мне нужна <b style="color: green">вертикальная</b>, если найдёте сохраните в эту папочку. Наш дискорд сервер ниже:</h2><div class="dis">
+<p><h2>Думаю вы поняли что эти дурки реально лучшие. Наш дискорд сервер ниже:</h2><div class="dis">
 <a href="https://z00zd.github.io/site/"><img src="https://static.vecteezy.com/system/resources/previews/006/892/625/original/discord-logo-icon-editorial-free-vector.jpg" width=150px; hight=150px; style="border-radius: 100px">
 </main>
 </body>
