--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 	<li>фото</li>
 </ul>
 <h2>Поехали</h2>
-<p style="color: blue">Здесь вы сможете купить лучшие <a href="https://scpfoundation.net/scp-500" class="passe-partout>таблетки</a> в России.
+<p style="color: blue">Здесь вы сможете купить лучшие <a href="https://scpfoundation.net/scp-500" таблетки</a> в России.
 </header>
 <main>
-<img src="https://i.pinimg.com/originals/6a/09/e2/6a09e24d1e95fbbd28bcdcbab5436f97.jpg" hight= 750px; width= 750px>
+<img src="https://i.pinimg.com/originals/6a/09/e2/6a09e24d1e95fbbd28bcdcbab5436f97.jpg" class="passe-partout" hight= 750px; width= 750px>
 <h2>Клиника РОСА</h2>
 <p>Страх перед психиатрическими больницами укоренился в сознании людей еще с тех пор, когда в лечебницах для душевнобольных не оказывали никакой помощи, а лишь изолировали пациентов от общества. Но с тех пор многое изменилось. Карательной психиатрии давно не существует, а психиатры вообще не заинтересованы в том, чтобы отправлять кого-либо в стационар.
 Большинство заболеваний лечатся амбулаторно (то есть не ложась в больницу). Однако, если госпитализация все-таки необходима, у вас есть право выбрать государственную или частную больницу. Так, в клинике РОСА созданы все условия для лечения и реабилитации пациентов, страдающих от психических заболевания, алкоголизма и наркомании. Она входит в список лучших психиатрических клиник Москвы и демонстрирует отличные результаты в лечении даже самых тяжелых случаев.
