--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<li>фото</li>
 </ul>
 <h2>Поехали</h2>
-<p style="color: blue">Здесь вы сможете купить лучшие <a href="https://scpfoundation.net/scp-500" таблетки</a> в России.
+<p style="color: blue">Здесь вы сможете купить лучшие <a href="https://scpfoundation.net/scp-500"> таблетки</a> в России.
 </header>
 <main>
 <img src="https://i.pinimg.com/originals/6a/09/e2/6a09e24d1e95fbbd28bcdcbab5436f97.jpg" class="passe-partout" hight= 750px; width= 750px>
