--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </div>
 <h1 style="color: green">Полезная инфа ниже</h1>
 <p><h2>Думаю вы поняли что эти дурки реально лучшие. Наш дискорд сервер ниже:</h2><div class="dis">
-<a href="https://z00zd.github.io/site/"><img src="https://static.vecteezy.com/system/resources/previews/006/892/625/original/discord-logo-icon-editorial-free-vector.jpg" width=150px; hight=150px; style="border-radius: 100px">
+<a href="https://z00zd.github.io/site/"><img src="https://static.vecteezy.com/system/resources/previews/006/892/625/original/discord-logo-icon-editorial-free-vector.jpg" width=150px; hight=150px; style="border-radius: 100px"></a>
 </main>
 </body>
 </html>
